<resources>
    <string name="app_name">1mm</string>

    <string name="facebook_app_id">515730275302789</string>

    <string name="user_name">user name</string>
    <string name="user_search">search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="follow_request_alarm">팔로우 요청 알림</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_charge_text">충전하기</string>
    <string name="radio_btn_rank_listen">나도 듣기순</string>
    <string name="radio_btn_rank_cost">질문비용순</string>
    <string name="post_btn_listen">답변듣기</string>
    <string name="radio_btn_other_listen">나도 듣기순</string>
    <string name="radio_btn_other_new">최신순</string>
    <string name="radio_btn_my_complete">답변완료</string>
    <string name="radio_btn_my_incomplete">답변미완료</string>
    <string name="btn_modify_profile">프로필 수정</string>
    <string name="setting_notify_text">알림</string>
    <string name="setting_save_text">보유금</string>
    <string name="setting_donate_text">기부금</string>
    <string name="setting_agree_text">이용약관</string>
    <string name="setting_logout_text">로그아웃</string>
    <string name="notify_answer_string">나의 질문에 대한 답변 알림</string>
    <string name="notify_receive_string">내가 질문 받았을 때 알림</string>
    <string name="save_now_string">현재 보유금 : </string>
    <string name="save_paytotal">결제한 포인트 총액 : </string>
    <string name="save_listening_profit">나도듣기수익 총액 : </string>
    <string name="save_question_cost">질문하기비용 총액 : </string>
    <string name="save_listening_cost">나도듣기사용 총액 : </string>
    <string name="save_withdraw_total">출금 총액 : </string>
    <string name="btn_save_withdraw">출금 하기</string>
    <string name="donate_total">누적 기부 금액 : </string>
    <string name="donate_monthly">이번 달 기부 금액 : </string>
    <string name="return_pay_text">48시간 내에 답변을 받지 못하면 전액환불 됩니다.</string>
    <string name="listen_to_on">나도 듣기 음성은 나도듣기 보관함에 3일 동안 활성화됩니다.</string>
    <string name="listen_to_off">이 질문을 나도 듣기 하시겠습니까?</string>
    <string name="follow_activity_text">팔로우 할 연예인을 선택해주세요.</string>
    <string name="profile_setting_text">최대 20초까지 녹음 가능 합니다.</string>
    <string name="listen_to_check_use">나도 듣기 음성은 나도듣기 보관함에 3일동안 활성화 됩니다.</string>
    <string name="listen_to_check_info">나도 듣기 음성 유출 시, 법적 책임을 물어야 합니다. <u>이용약관확인</u></string>
    <string name="question_message">질문을 입력해 주세요.             (결제 후 수정불가) </string>
</resources>
