<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="12dp">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/save_now_string"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_current_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView12"
        android:layout_toRightOf="@+id/textView12"
        android:text="New Text"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginBottom="30dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_setting_spread" />

    <RelativeLayout
        android:visibility="gone"
        android:layout_below="@+id/text_current_point"
        android:id="@+id/layout_save_child"
        android:layout_width="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_paytotal"
            android:id="@+id/textView7"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:text="@string/save_listening_profit"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_question_cost"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:text="@string/save_listening_cost"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_withdraw_total"
            android:id="@+id/textView11"
            android:layout_below="@+id/textView10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/text_pay_total"
            android:layout_alignBottom="@+id/textView7"
            android:layout_toRightOf="@+id/textView7"
            android:layout_toEndOf="@+id/textView7" />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/text_listening_profit"
            android:layout_alignBottom="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:layout_toEndOf="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/text_question_cost"
            android:layout_alignBottom="@+id/textView9"
            android:layout_toRightOf="@+id/textView9"
            android:layout_toEndOf="@+id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/text_listening_cost"
            android:layout_alignBottom="@+id/textView10"
            android:layout_toRightOf="@+id/textView10"
            android:layout_toEndOf="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/text_withdraw_total"
            android:layout_alignBottom="@+id/textView11"
            android:layout_toRightOf="@+id/textView11"
            android:layout_toEndOf="@+id/textView11" />

        <Button
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:id="@+id/btn_withdraw"
            android:layout_below="@+id/text_listening_cost"
            android:layout_alignTop="@+id/text_withdraw_total"
            android:background="@drawable/ic_setting_point_outbtn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</RelativeLayout>