<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="16dp">

    <RelativeLayout
        android:id="@+id/layout_switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/answer_switch"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/answer_switch"
            android:text="@string/notify_answer_string"
            android:textSize="13sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/answer_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_switch1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/question_switch"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/question_switch"
            android:text="@string/notify_receive_string"
            android:textSize="13sp" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/question_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_switch2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/like_switch"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/like_switch"
            android:text="@string/follow_request_alarm"
            android:textSize="13sp" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/like_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:layout_alignParentRight="true" />

        </RelativeLayout>

</RelativeLayout>